  - Moved the URLEncoding class from the net package to the text package.
  - Added unit test classes for the IntXX type classes.
  - Removed boundary checks on all methods except the isValidValue method in
    all the IntXX type classes.
  - Added unit test class for Boolean type class.
  - Added fileFound() method to FileWatcher.Listener interface.
    WARNING: This may break existing code.
  - Added unit test for the HTTPServiceCaller.

* XINS/Java Client Framework:
  - Fixed SF.net bug #1043048. Previously a ClassCastException was thrown if
    XINSServiceCaller.call(XINSCallRequest) was called and the call succeeded.
  - Fixed SF.net bug #1050606. If no data received from an HTTP call, an
    InvalidResultXINSCallException is thrown instead of an
    IllegalArgumentException.
  - Fixed the Javadoc for the UnsuccessfulXINSCallException.
  - Added AbstractCAPICallResult as base class for generated function call
    result classes.
  - Changed UnacceptableResultXINSCallException to accept an
    AbstractCAPICallResult instance as an alternative to a XINSCallResult
    instance. This is necessary so CAPI users can actually throw an
    UnacceptableResultXINSCallException, since they have no handle to a
    XINSCallResult instance directly.
  - If doCall(CallRequest) throws an unexpected type of exception, then an
    Error is thrown. Improved the message for that Error, and registering the
    cause of the Error properly.
  - Class XINSCallResult now implements XINSCallResultData interface.
  - Added UnsuccessfulXINSCallException constructor that accepts a
    XINSCallResultData instance.
  - Removed the call(XINSCallRequest,TargetDescriptor) method from class
    XINSServiceCaller.
    WARNING: This may break existing code.

* Logdoc
  - The boolean type was not declared in the log_to_entry_html.xslt as a
    logdoc type. This is now fixed.
  - Refactored the translation-bundle_to_java.xslt as the previous
    implementation failed in some possible situations.
