@@ -32,7 +32,11 @@ CHANGES INTRODUCED IN XINS 0.209:                                (1.0.0-beta2)
   - Added unit test class for Boolean type class.
   - Added fileFound() method to FileWatcher.Listener interface.
     WARNING: This may break existing code.
-  - Added unit test for the HTTPServiceCaller.
+  - Added unit tests for the HTTPServiceCaller.
+  - Class HTTPCallResultData is now an interface.
+  - Class HTTPCallResult now implements HTTPCallResultData interface.
+  - A ClassCastException was thrown if HTTPServiceCaller.call(HTTPCallRequest) 
+    was called and the call succeeded. This is now fixed.
 
 * XINS/Java Client Framework:
   - Fixed SF.net bug #1043048. Previously a ClassCastException was thrown if
